# UMARV-CV-ScenePerception

./: .gitignore  Copy_of_generalizable_object_detection.ipynb  README.md  pyproject.toml  requirements.txt
UMARV-CV-ScenePerception/: pyvenv.cfg
algorithms/algorithm_32q16kxf/content/: info.json
algorithms/algorithm_32q16kxf/docs/: README.md  requirements.txt
algorithms/algorithm_32q16kxf/src/: dbscan_processing.py  main.py  noise.py  roboflow_processing.py  utils.py
algorithms/algorithm_32rr2m7i/docs/: README.md  requirements.txt
algorithms/algorithm_32rr2m7i/src/: HSV_on_video.py  bev.py  classical.py  classical_new.py  demo.py  grayscale.py  hsv.py  hsv_tune.py  hsv_values.json  image_mode_demo.py  lane_detect.py  left_turn.py  left_turn_new.py  no_mans_land.py  right_turn.py  right_turn_new.py  right_turn_testing.py  yellow.json  yolov8.py
algorithms/algorithm_374wz1gk/content/: info.json
algorithms/algorithm_374wz1gk/docs/: README.md
algorithms/algorithm_374wz1gk/src/: hsv.py  left_turn.py  left_turn_old.py  right_turn.py
algorithms/algorithm_37bec7ux/content/: info.json
algorithms/algorithm_37bec7ux/docs/: README.md  algorithm_notes.txt  requirements.txt
docs/: creating_datasets.md  working_with_environments.md
kalman/: kalman.py  kalman_tests.py  linearize.py
kalman/model/: bev.py  lane_detection.txt  lane_detection_xy.txt
linearize/: linearize.py
linearize/tests/: test_linearize.py
models/model_32offjns/: requirements.txt  yolo_pytorch_sandbox.ipynb
models/model_32offjns/src/: occ1.py  (+5 more)
src/scripts/: create_new_model.py  helpers.py
(+127 files in other folders)
