[project]
name = "umarv-cv-sceneperception"
version = "0.1.0"
description = ""
authors = [
    {name = "Steffano Martinez",email = "77033928+SteffanoMartinez@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
